syntax = "proto3";

package product;

message Product {
  string product_id = 1;
  string title = 2;
  string description = 3;
  double price = 4;
  string image = 5;
}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message ListProductsRequest {
  repeated string productIds = 1;
}

message ListProductsResponse {
  repeated Product products = 1;
}

service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}
